--- a/tasks.html
+++ b/tasks.html
@@ -94,7 +94,7 @@
       <article class="task-card">
         <h2>Задание 3. Flexbox (Вариант 3)</h2>
         <p>Фон — шкаф. При наведении мальчик медленно выбегает слева направо поверх фона.</p>
-
+        <a href="flex.html">Открыть задание →</a>
         <div class="flex-stage">
           <div class="flex-card scene" aria-label="Flexbox элемент">
             <img class="boy" src="/mysite/assets/img/toy2.png" alt="Бегущий мальчик" />
