--- a/tasks.html
+++ b/tasks.html
@@ -24,9 +24,10 @@
 
     <nav class="main-nav">
       <ul>
-        <li><a href="/mysite/index.php">Главная</a></li>
-        <li><a href="/mysite/tasks.php">Задания</a></li>
-        <li><a href="/mysite/coursework.php">Курсовая</a></li>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="tasks.html">Задания</a></li>
+        <li><a href="coursework.html">Курсовая</a></li>
+          <li><a href="flex.html">Flexbox</a></li>
       </ul>
     </nav>
   </div>
