--- a/tasks.html
+++ b/tasks.html
@@ -34,10 +34,10 @@
 </header>
 
 <main class="site-main">
+ 
   <div class="container">
 
     <section class="page-title">
-      <p style="color:red;font-weight:700;">TEST HTML UPDATED</p>
 
       <h1>Задания по курсу</h1>
       <p>Здесь собраны примеры(!) лабораторных и практических заданий по веб-разработке.</p>
@@ -110,8 +110,13 @@
         </div>
       </article>
 
-     
+      <article class="task-card puzzle-task">
+        <h2>Задание: Собери домик</h2>
+        <p>Перетаскивание объектов. Поверните фигуры и соберите картинку.</p>
+        <a href="puzzle.html">Открыть задание →</a>
+      </article>
 
+    
       <article class="task-card" id="task4">
         <h2>Задание 4. Работа с JavaScript</h2>
         <p>Работа с массивами, классами CSS, генерацией элементов и обработчиками событий.</p>
@@ -180,3 +185,4 @@
 
 </body>
 </html>
+
