Добавлено задание Собери домик

--- a/tasks.html
+++ b/tasks.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <div class="task4-output" id="phrasesOutput" aria-live="polite"></div>
+
 
 <header class="site-header">
   <div class="container header-inner">
@@ -83,6 +85,7 @@
               <div class="body"></div>
               <div class="lid"></div>
               <div class="knob"></div>
+              <div class="knob2"></div>
               <div class="spout"></div>
               <div class="handle"></div>
             </div>
