--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="tasks.html">Задания</a></li>
                 <li><a href="coursework.html">Курсовая</a></li>
+                <li><a href="coursework.html">новые задания</a></li>
+                <li><a href="coursework.html">новые задания</a></li>
+                <li><a href="coursework.html">новые задания</a></li>
             </ul>
         </nav>
     </div>
