Добавлено задание Собери домик с перетаскиванием

--- a/puzzle.html
+++ b/puzzle.html
@@ -212,12 +212,12 @@
         <h3>Собрать домик в любом месте</h3>
 
        <!-- Квадрат дома (повёрнут на 90°) -->
-<div class="shape square" id="house" style="left: 30px; top: 120px; transform: rotate(90deg);" data-rotation="45">
+<div class="shape square" id="house" style="left: 30px; top: 120px; transform: rotate(45deg);" data-rotation="45">
   <button class="rotate-btn">↻</button>
 </div>
 
 <!-- Крыша (треугольник, повёрнут на 90°) -->
-<div class="shape triangle-roof" id="roof" style="left: 150px; top: 180px; transform: rotate(90deg);" data-rotation="135">
+<div class="shape triangle-roof" id="roof" style="left: 150px; top: 180px; transform: rotate(135deg);" data-rotation="135">
   <button class="rotate-btn">↻</button>
 </div>
 
@@ -227,7 +227,7 @@
 </div>
 
 <!-- Ёлка: 3 треугольника (повёрнуты на 90°) -->
-<div class="shape triangle-tree-1" id="tree1" style="left: 120px; top: 50px; transform: rotate(90deg);" data-rotation="45">
+<div class="shape triangle-tree-1" id="tree1" style="left: 120px; top: 50px; transform: rotate(45deg);" data-rotation="45">
   <button class="rotate-btn">↻</button>
 </div>
 
@@ -247,7 +247,7 @@
 
       <!-- Правая область - пример -->
       <div class="puzzle-area" id="exampleArea" style="pointer-events: none; opacity: 0.7;">
-        <h3>Собрать домик в любом месте</h3>
+        <h3>Пример собранной картинки</h3>
         <!-- Пример собранной картинки -->
         <div class="shape triangle-tree-1" style="left: 80px; top: 80px; transform: rotate(0deg);"></div>
         <div class="shape triangle-tree-2" style="left: 70px; top: 115px; transform: rotate(0deg);"></div>
